# Game

./: .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  AGENTS.md  AGENT_WORKFLOW_GUIDE.md  ALIENA_documento_integrato.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  COMPACT_CONTEXT.md  CONTRIBUTING.md  CREDITS.md  DECISIONS_LOG.md  Evo-Tactics-Demo.bat  Evo-Tactics-Install-Desktop-Shortcuts.bat  Evo-Tactics-Install-Ngrok-Official.bat  Evo-Tactics-Setup-Ngrok-Auth.bat  Evo-Tactics-Sync-Main.bat  Evo-Tactics-Toggle-A-Classic.bat  Evo-Tactics-Toggle-B-BG3lite.bat  FLINT.md  INDEX.md  LIBRARY.md  MASTER_PROMPT.md  MODEL_ROUTING.md  Makefile  OPEN_DECISIONS.md  PROJECT_BRIEF.md  PROMPT_LIBRARY.md  PULL_REQUEST_TEMPLATE.md  README.md  README_CI.md  README_HOWTO_AUTHOR_TRAIT.md  README_IDEAS.md  REPORT_site_audit.md  RESEARCH_TODO.md  SPRINT_001.md  (+31 more)
.ai/: BOOT_PROFILE.md  GLOBAL_PROFILE.md
.claude/: SAFE_CHANGES.md  TASK_PROTOCOL.md  launch.json  settings.json  settings.local.json
.husky/: post-commit  pre-commit
Game/: README.md
Trait Editor/: README.md  index.html  package.json  vite.config.ts
agents/: AGENT_TEMPLATE.md  agents_index.json  archivist.md  asset-prep.md  balancer.md  biome-ecosystem-curator.md  biome-gameplay-integrator.md  combat-engineer.md  coordinator.md  dev-tooling.md  gameplay-prototyper.md  lore-designer.md  mechanic_connector.md  playtest-coordinator.md  species-curator.md  trait-curator.md  trait-editor.md
analytics/: README.md  events.ts  matchmaking.ts  trait_balance_analysis.py
appendici/: A-CANVAS_ORIGINALE.txt  C-CANVAS_NPG_BIOMI.txt  D-CANVAS_ACCOPPIAMENTO.txt
assets/: style.css
biomes/: terraforming_bands.yaml
caveman-mode-skill/: SKILL.md
config/: access.yaml  dashboard_metrics_baseline.json  dataSources.json  data_path_redirects.json  featureFlags.json  feature_flags.yaml  horde_balancing.json  mongodb.dev.json  mongodb.mock.json  mongodb.prod.json  nebula.json  orchestrator.json  (+5 more)
docs/: QA.md  (+71 more)
flint/: DEEP_RESEARCH.md  FLINT.md  INSTALL.md  Makefile  PROJECT.md  README.md  install.py  pyproject.toml  smoke_test.py
flint/.github/workflows/: flint-ci.yml
flint/archive-template/: MANIFEST-template.md
flint/claude-integration/: CLAUDE.md-section-template.md  README.md
flint/claude-integration/commands/: classify-4d.md
flint/claude-integration/memory/: MEMORY.md.template  feedback_claude_workflow_consolidated.md  feedback_meta_checkpoint_directive.md  reference_classification_4d.md  reference_flint_optimization_guide.md
flint/src/flint/: __init__.py  __main__.py  cli.py  engine.py  repo.py  seeds.py
flint/tests/: test_engine.py  test_repo.py
flint/tools/: flint_status_stdlib.py
(+7077 files in other folders)
