[project]
name = "flint"
version = "0.2.0"
description = "🦴 Caveman companion per il repo Evo-Tactics — git-driven, context-aware, scope-creep repellent."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Master", email = "master@evo-tactics.local" }]
keywords = ["gamedev", "cli", "evo-tactics", "flint", "scope-creep", "indie-game", "dev-companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
remote = ["httpx>=0.28.0"]

# 2026 standard: dependency-groups (PEP 735)
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
flint = "flint.cli:app"

[project.urls]
Homepage = "https://github.com/MasterDD-L34D/Game"
Documentation = "https://github.com/MasterDD-L34D/Game/tree/main/flint"
Issues = "https://github.com/MasterDD-L34D/Game/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flint"]

[tool.uv]
required-version = ">=0.5.0"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "SIM", "RUF", "PERF",
    "PL", "C4", "PTH", "RET", "TRY", "N",
]
ignore = [
    "PLR0913",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=flint",
    "--cov-report=term-missing",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/flint"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
